# FnFinder

./: .gitignore  CMakeLists.txt  LICENSE  README.md  README.zh-CN.md
.github/workflows/: build.yml
src/: main.cc
src/analysis/: analysis_options.h  analysis_result.h  code_map.cc  code_map.h  eh_frame_parser.cc  eh_frame_parser.h  function.h  function_analyzer.cc  function_analyzer.h  function_boundary_resolver.cc  function_boundary_resolver.h  function_bounds.h  linear_sweep_scanner.cc  linear_sweep_scanner.h  recursive_disassembler.cc  recursive_disassembler.h
src/analysis/control_flow/: basic_block.h  cfg_builder.cc  cfg_builder.h  code_patterns.cc  code_patterns.h  control_flow_graph.cc  control_flow_graph.h  decoded_instruction.h  function_extent_analyzer.cc  function_extent_analyzer.h  instruction_cache.cc  instruction_cache.h
src/app/: result_printer.cc  result_printer.h
src/common/: byte_reader.cc  byte_reader.h  exception.h  logger.cc  logger.h  status_code.h  string_util.cc  string_util.h  types.h
src/disasm/: capstone_compat.h  capstone_disassembler.cc  capstone_disassembler.h  disassembler.h  instruction.h
src/disasm/aarch64/: aarch64_mnemonics.cc  aarch64_mnemonics.h
src/elf/: elf_constants.h  elf_image.cc  elf_image.h  elf_parser.cc  elf_parser.h  elf_section.h  elf_segment.h  elf_symbol.h
src/symbol/: demangler.h  itanium_demangler.cc  itanium_demangler.h  name_resolver.cc  name_resolver.h
